[tool.poetry]
name = "py-scrap-2510"
version = "0.1.0"
description = ""
authors = ["ulgoon <ulgoon89@gmail.com>"]
readme = "README.md"
packages = [{include = "py_scrap_2510"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"
selenium = "^4.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
